--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Rachel Salois</a>
+                      <a href="students/rachel_salois.html">Rachel Salois</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line to be Tagged Later</p>
