--- a/students/kevin_wang.html
+++ b/students/kevin_wang.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/Kevin_background.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -94,7 +94,7 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/Kevin_Yorkie.jpg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>"Call me maybe." --Carly Rae Jepsen</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                  West Philidelphia, born and raised; playground where I spend most of my days... 
                 </p>
               </div>
             </div>
@@ -148,8 +148,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>Boston University</li>
+                  
                 </ul>
               </div>
             </div>
@@ -158,9 +158,9 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <h4>Adecco</h4>
                 <p>
-                  Blurb about company...
+                  Staffing
                 </p>
               </div>
             </div>
@@ -259,9 +259,9 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      <a>Buenos Aires</a><br>
-                      <a>Barcelona</a><br>
-                      <a>Minneapolis</a><br>
+                      <a>Budapest</a><br>
+                      <a>Prague</a><br>
+                      <a>Reykavik</a><br>
                       <a>New York</a><br>
                     </p>
                   </div>
@@ -273,9 +273,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="https://www.amazon.com/">Amazon.com</a><br>
+                    - Favorite Musical: <a href="http://bookofmormonbroadway.com/tickets">Book of Mormon</a><br>
+                    - Favorite Radio Program: <a href="http://z100.iheart.com/">Z100</a><br>
                   </p>
                 </div>
               </div>
